SERVER-23297 consolidate namespace validation